[package]
name = "test-oci"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
reqwest = {version ="0.12.15",  features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
tokio = {version = "1.45.0", features = ["full"]}
sha2 = "0.10"
